# dilicom-parser

./: .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  publication.md  pyproject.toml
dilicom_parser/: __init__.py
dilicom_parser/config/eancode/: erc_ftx.toml  nad.toml
dilicom_parser/config/gencode/: ane.toml  ast.toml
dilicom_parser/documentations/eancode/: dtm.toml  rff.toml
dilicom_parser/documentations/gencode/: ale_ate.toml
dilicom_parser/parser/: service_parser.py
dilicom_parser/parser/services/: gencod.py
dilicom_parser/tests/: test_eancom_parser.py  test_gencod_parser.py  test_imports.py
dilicom_parser/tests/fixtures/: eancom_ale_valid.txt  eancom_ane_with_error.txt  eancom_ate_valid.txt  eancom_invalid_qualifier.txt  gencod_ate_valid.txt  gencod_multiple_messages.txt
dilicom_parser/utils/: alignment.py
docs/: .buildinfo  dilicom_parser.html  dilicom_parser.models.html  dilicom_parser.parser.html  dilicom_parser.parser.services.html  dilicom_parser.transport.html  dilicom_parser.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: dilicom_parser.models.rst.txt  dilicom_parser.parser.rst.txt  dilicom_parser.parser.services.rst.txt  dilicom_parser.rst.txt  dilicom_parser.transport.rst.txt  dilicom_parser.utils.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
documentations/eancode/: bgm.toml  unb.toml  unh.toml  unt_unz.toml
src/dilicom_parser/: __init__.py  __init__.pyi
src/dilicom_parser/classifier/: __init__.py  __init__.pyi  classifier.py  classifier.pyi
src/dilicom_parser/models/: __init__.py  __init__.pyi  classifier.py  classifier.pyi  connector.py  connector.pyi  distributor.py  distributor.pyi  service.py  service.pyi  utils.py  utils.pyi
src/dilicom_parser/parser/: __init__.py  __init__.pyi  distributor_parser.py  distributor_parser.pyi  service_parser.py  service_parser.pyi
src/dilicom_parser/parser/services/: eancom.py  eancom.pyi  gencod.py  gencod.pyi
src/dilicom_parser/transport/: __init__.py  __init__.pyi  config.py  config.pyi  connector.py  connector.pyi  decorators.py  decorators.pyi  exceptions.py  exceptions.pyi
src/dilicom_parser/utils/: __init__.py  __init__.pyi  alignment.py  alignment.pyi  exceptions.py  exceptions.pyi  registry.py  registry.pyi  type_parsers.toml
tests/: test_classifier.py  test_distributor_parser.py  test_eancom_parser.py  test_gencod_parser.py  test_imports.py  test_transport.py
tests/fixtures/: distributor_empty.txt  distributor_valid.txt  eancom_multiple_messages.txt  gencod_ale_valid.txt  gencod_ane_with_error.txt
