[project]
name = "dilicom-parser"
version = "0.2.0"
description = "Bibliothèque souveraine pour parser les fichiers Dilicom déposés sur le serveur SFTP de Dilicom avec connecteur SFTP intégré."
authors = [{name="Rémi Verschuur", email="rverschuur@audit-io.fr"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["pandas", "paramiko", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/remiv1/dilicom-parser"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
